# bolt4

./: AGENTS.md  CHANGELOG  README.md  flake.nix  ppad-bolt4.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT4.hs
lib/Lightning/Protocol/BOLT4/: Blinding.hs  Codec.hs  Construct.hs  Error.hs  Internal.hs  Prim.hs  Process.hs  Types.hs
plans/: ARCH1.md  IMPL1.md  IMPL2.md  IMPL3.md  IMPL4.md  IMPL5.md  IMPL6.md  README.md  REVIEW-421a8f1.md  REVIEW-6f3327f.md  REVIEW-94936a9.md  REVIEW-a3c7517.md  REVIEW-f6c4a17.md
test/: Main.hs
