cabal-version:      3.0
name:               ppad-bolt4
version:            0.0.1
synopsis:           BOLT4 (onion routing) for Lightning Network
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
description:
    A pure Haskell implementation of BOLT4 (onion routing) from
    the Lightning Network protocol specification.

source-repository head
    type:     git
    location: git://git.ppad.tech/bolt4.git

library
    default-language: Haskell2010
    hs-source-dirs:   lib
    ghc-options:
        -Wall
    exposed-modules:
        Lightning.Protocol.BOLT4
        Lightning.Protocol.BOLT4.Codec
        Lightning.Protocol.BOLT4.Construct
        Lightning.Protocol.BOLT4.Prim
        Lightning.Protocol.BOLT4.Types
    build-depends:
        base >= 4.9 && < 5
      , bytestring >= 0.9 && < 0.13
      , ppad-chacha >= 0.2 && < 0.3
      , ppad-secp256k1 >= 0.5 && < 0.6
      , ppad-sha256 >= 0.3 && < 0.4

test-suite bolt4-tests
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:
        -rtsopts -Wall -O2
    build-depends:
        base
      , bytestring
      , ppad-base16
      , ppad-bolt4
      , ppad-secp256k1
      , tasty
      , tasty-hunit
      , tasty-quickcheck

benchmark bolt4-bench
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Main.hs
    ghc-options:
        -rtsopts -O2 -Wall -fno-warn-orphans
    build-depends:
        base
      , bytestring
      , criterion
      , deepseq
      , ppad-bolt4

benchmark bolt4-weigh
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Weight.hs
    ghc-options:
        -rtsopts -O2 -Wall -fno-warn-orphans
    build-depends:
        base
      , bytestring
      , ppad-bolt4
      , weigh
